add main menu and inventory ui

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,5 @@ crashlytics-build.properties
 Assets/Scenes/TestScene.unity
 Assets/Scenes/TestScene.unity.meta
 /Assets
+/Packages
+/ProjectSettings/Packages
