Add Material Assets Folder

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,7 @@ Assets/Scenes/TestScene.unity
 Assets/Scenes/TestScene.unity.meta
 /Packages
 /ProjectSettings/Packages
+/Assets/Local
+/Assets/Scenes/TestScene
+Assets/Scenes/TestScene.meta
+Assets/Local.meta
