--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,6 @@ Assets/Scenes/TestScene.unity.meta
 /Packages
 /ProjectSettings/Packages
 .idea/workspace.xml
+Assets/Scenes/TestScene.meta
+/Assets/Local
+Assets/Local.meta
