--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,6 @@ Assets/Scenes/TestScene.unity.meta
 /ProjectSettings/Packages
 .idea/workspace.xml
 
+/Assets/Local
+Assets/Local.meta
+/Assets/Scenes
