--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,16 @@
 {
   "dependencies": {
     "com.unity.ai.navigation": "1.1.5",
+    "com.unity.cinemachine": "2.9.5",
     "com.unity.collab-proxy": "2.5.2",
+    "com.unity.ext.nunit": "2.0.3",
     "com.unity.feature.development": "1.0.2",
+    "com.unity.ide.rider": "3.0.22",
+    "com.unity.ide.vscode": "1.2.1",
     "com.unity.inputsystem": "1.6.3",
+    "com.unity.postprocessing": "3.3.0",
+    "com.unity.recorder": "4.0.1",
+    "com.unity.test-framework": "1.3.5",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.8.2",
     "com.unity.ugui": "1.0.0",
